appId: com.fractanomics.crosstraining
---
- launchApp:
    clearState: true
- assertVisible: "CrossTraining"
- assertVisible: "Continue with Google"
- assertVisible: "Continue as Guest"
- tapOn: "Continue as Guest"
- assertVisible: "Log Session"
